Added Place Order Page

--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <div id="logo">
-        	<img src="img/logo.png">
+            <img alt="logo" src="img/logo.png">
         </div>
         
         <div id="fields">
-        	<form id="login_form" autocomplete="off">
-	        	<input type="text" id="usernameField" placeholder="Username"/>
-	        	<input type="password" id="passwordField" placeholder="Password"/>
-	        	<input type="submit" value="Login" id="loginButton"/>
-        	</form>
+            <form id="login_form" autocomplete="off" action="landing.html">
+                <input type="text" id="usernameField" placeholder="Username"/>
+                <input type="password" id="passwordField" placeholder="Password"/>
+                <input type="submit" value="Login" id="loginButton"/>
+            </form>
         </div>
     </body>
 </html>
