Further Changes to Place Order Page

--- a/placeOrder.html
+++ b/placeOrder.html
@@ -30,7 +30,9 @@
             <input type="text" id="propertyName" placeholder="Property Name"/>
             <input type="text" id="endUserFirstName" placeholder="Contact First Name"/>
             <input type="text" id="endUserLastName" placeholder="Contact Last Name"/>
-            <input type="text" id="endUserTitle" placeholder="Contact Title"/>
+            <input type="text" id="endUserTitle" placeholder="Contact Title/Position"/>
+            <input type="text" id="endUserEmail" placeholder="Contact E-mail Address"/>
+            <input type="text" id="endUserPhone" placeholder="Contact Phone Number"/>
             <input type="text" id="address_street" placeholder="Street Address"/>
             <input type="text" id="address_city" placeholder="City"/>
             <select id="address_state" class="chosen-select">
@@ -87,7 +89,10 @@
                 <option value="WI">Wisconsin</option>
                 <option value="WY">Wyoming</option>
             </select>
-            <input type="number" id="address_zip" placeholder="Zip Code"/>  
+            <input type="number" id="address_zip" placeholder="Zip Code"/><br>
+            <input type="button" id="residentialAddress" value="Residential"/>
+            <input type="button" id="businessAddress" value="Business"/>
+            
         </div>
     </body>
 </html>
