--- a/placeOrder.html
+++ b/placeOrder.html
@@ -20,6 +20,7 @@
         <script src="js/effects_placeOrder.js"></script>
         <script src="js/jquery.ddslick.min.js"></script>
         <script src="js/chosen_v1.1.0/chosen.jquery.js"></script>
+        <script src="js/jquery.scrollTo-1.4.3.1-min.js"></script>
         
     </head>
     <body>
@@ -121,6 +122,19 @@
             <input type="button" id="corpEmployee" value="Corporate Employee"/>
             <input type="button" id="businessCenter" value="Business Center"/>
             <input type="button" id="print_scan" value="Printers & Scanners"/>
+        </div>
+        
+        <div id="productSelect_manager" style="display: block">
+            <a name="productSelect_manager_a"></a>
+            <h1>Select Products</h1>
+            <input type="button" id="laptop" Value="Laptop" /><br>
+            <input type="button" id="monitor" Value="Monitor" /><br>
+            <input type="button" id="dockingStation" Value="Docking Station" /><br>
+            <input type="button" id="kb_mouse" Value="Keyboard & Mouse" /><br>
+            <input type="button" id="office" Value="Office 2013" /><br>
+            <input type="button" id="adobeAcrobat" Value="Adobe Acrobat Standard" /><br>
+            <input type="button" id="emailSetup" Value="E-mail Setup" /><br>
+            <input type="email" id="userEmail" />
         </div>
     </body>
 </html>
