--- a/placeOrder_1.html
+++ b/placeOrder_1.html
@@ -25,8 +25,14 @@
     <body>
         <div id="shippingInfo">
             <h1>Select Products</h1>
-            <input type="button" id="Laptop" Value="Laptop" />
-            <label for="Laptop">Laptop</label>
+            <input type="button" id="laptop" Value="Laptop" /><br>
+            <input type="button" id="monitor" Value="Monitor" /><br>
+            <input type="button" id="dockingStation" Value="Docking Station" /><br>
+            <input type="button" id="kb_mouse" Value="Keyboard & Mouse" /><br>
+            <input type="button" id="office" Value="Office 2013" /><br>
+            <input type="button" id="adobeAcrobat" Value="Adobe Acrobat Standard" /><br>
+            <input type="button" id="emailSetup" Value="E-mail Setup" /><br>
+            <input type="email" id="userEmail" />
         </div>
     </body>
 </html>
