Added Styling to Manager Section of Order Form
This will serve as the baseline for the remainder of the order forms.

--- a/placeOrder.html
+++ b/placeOrder.html
@@ -21,7 +21,7 @@
         <script src="js/jquery.ddslick.min.js"></script>
         <script src="js/chosen_v1.1.0/chosen.jquery.js"></script>
         <script src="js/jquery.scrollTo-1.4.3.1-min.js"></script>
-        
+        <script src="js/jquery.animate-shadow.js"></script>
     </head>
     <body>
         <div id="propertyTypeSelect"></div>
@@ -124,7 +124,7 @@
             <input type="button" id="print_scan" value="Printers & Scanners"/>
         </div>
         
-        <div id="productSelect_manager" style="display: block">
+        <div id="productSelect_manager" style="display: none">
             <a name="productSelect_manager_a"></a>
             <h1>Select Products</h1>
             <input type="button" id="laptop" Value="Laptop" /><br>
@@ -132,7 +132,7 @@
             <input type="button" id="dockingStation" Value="Docking Station" /><br>
             <input type="button" id="kb_mouse" Value="Keyboard & Mouse" /><br>
             <input type="button" id="office" Value="Office 2013" /><br>
-            <input type="button" id="adobeAcrobat" Value="Adobe Acrobat Standard" /><br>
+            <input type="button" id="adobeAcrobat" Value="Adobe Acrobat" /><br>
             <input type="button" id="emailSetup" Value="E-mail Setup" /><br>
             <input type="email" id="userEmail" />
         </div>
