Style Changes and Some JQuery Button Magic

--- a/placeOrder.html
+++ b/placeOrder.html
@@ -127,14 +127,18 @@
         <div id="productSelect_manager" style="display: none">
             <a name="productSelect_manager_a"></a>
             <h1>Select Products</h1>
-            <input type="button" id="laptop" Value="Laptop" /><br>
-            <input type="button" id="monitor" Value="Monitor" /><br>
-            <input type="button" id="dockingStation" Value="Docking Station" /><br>
-            <input type="button" id="kb_mouse" Value="Keyboard & Mouse" /><br>
-            <input type="button" id="office" Value="Office 2013" /><br>
-            <input type="button" id="adobeAcrobat" Value="Adobe Acrobat" /><br>
-            <input type="button" id="emailSetup" Value="E-mail Setup" /><br>
-            <input type="email" id="userEmail" />
+            <input type="button" id="laptop_manager" Value="Laptop" /><br />
+            <input type="button" id="monitor_manager" Value="Monitor" /><br />
+            <input type="button" id="dockingStation_manager" Value="Docking Station" /><br />
+            <input type="button" id="kb_mouse_manager" Value="Keyboard & Mouse" /><br />
+            <input type="button" id="office_manager" Value="Office 2013" /><br />
+            <input type="button" id="adobeAcrobat_manager" Value="Adobe Acrobat" /><br />
+            <input type="button" id="emailSetup_manager" Value="E-mail Setup" /><br />
+            <input type="email" id="email_manager" /><br />
+            <input type="button" id="yardiYes_manager" Value="Yes" />
+            <input type="button" id="yardiNo_manager" Value="No" /><br />
+            <input type="button" id="payscanYes_manager" Value="Yes" />
+            <input type="button" id="payscanNo_manager" Value="No" /><br />
         </div>
     </body>
 </html>
