--- a/landing.html
+++ b/landing.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/custom_landing.css">
+        <link rel="stylesheet" href="css/prettyButton.css">
         <script src="js/vendor/modernizr-2.7.1.min.js"></script>
         <script src="js/vendor/jquery-1.10.2.min.js"></script>
         <script src="js/plugins.js"></script>
@@ -40,27 +41,25 @@
             <header id="logo">
                 <img alt="logo" src="img/logo.png">
                 <div id="orderOptions">
-                    <input type="button" value="Place Order" id="placeOrder"/>
-
-                    <input type="button" value="Revise Order" id="reviseOrder"/>
+                    <a href="#" class="prettyButton" id="placeOrder">Create</a>
+                    <a href="#" class="prettyButton" id="reviseOrder">Revise</a>
+                    <a href="#" class="prettyButton" id="orderStatus">Status</a>
+                    <a href="#" class="prettyButton" id="cancelOrder">Cancel</a>
+                    <a href="#" class="prettyButton" id="orderApproval">Approve</a>
+                </div>
+                <div id="dropdowns">
                     <div id="orderNumber_revise">
                         <input type="text" onkeypress="return isNumberKey(event);" placeholder="Order Number">
                         <input type="button" id="reviseOrder_button" value="Revise Order">
                     </div>
-
-                    <input type="button" value="Status of Order" id="orderStatus"/>
                     <div id="orderNumber_status">
                         <input type="text" onkeypress="return isNumberKey(event);" placeholder="Order Number">
                         <input type="button" value="Find Order">
                     </div>
-
-                    <input type="button" value="Cancel Order" id="cancelOrder"/>
                     <div id="orderNumber_cancel">
                         <input type="text" onkeypress="return isNumberKey(event);" placeholder="Order Number">
                         <input type="button" value="Cancel Order">
                     </div>
-
-                    <input type="button" value="Order Approval" id="orderApproval"/>
                 </div>
             </header>
 
